change the size of the canvas

--- a/index.html
+++ b/index.html
@@ -5,50 +5,67 @@
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <!-- Save for Web Slices (email-marketing-ameriGeoss.psd) -->
-<table align="center" id="Tabela_01" width="901" height="225" border="0" cellpadding="0" cellspacing="0">
+<table align="center" id="Tabela_01" width="751" height="189" border="0" cellpadding="0" cellspacing="0">
 	<tr>
-		<td colspan="5">
-			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_01_top.jpg" width="900" height="36" alt=""></td>
+		<td colspan="6">
+			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_01_top.jpg" width="750" height="30" alt=""></td>
 		<td>
-			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="36" alt=""></td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="30" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="4">
-			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_02_left.jpg" width="65" height="189" alt=""></td>
+			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_02_left.jpg" width="54" height="158" alt=""></td>
 		<td rowspan="2">
 			<a href="https://www.amerigeoss.org/amerigeoss-events/amerigeoss-week-2018/amerigeoss-week-2018" target="AmeriGEOSS Week 2018"
 				onmouseover="window.status='AmeriGEOSS Week 2018';  return true;"
 				onmouseout="window.status='';  return true;">
-				<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_03_logo.jpg" width="241" height="142" border="0" alt="AmeriGEOSS Week 2018"></a></td>
+				<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_03_logo.jpg" width="201" height="118" border="0" alt="AmeriGEOSS Week 2018"></a></td>
 		<td rowspan="4">
-			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_04_middle.jpg" width="92" height="189" alt=""></td>
+			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_04_middle.jpg" width="77" height="158" alt=""></td>
 		<td>
-			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_05_logo_week.jpg" width="415" height="141" alt=""></td>
-		<td rowspan="4">
-			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_06_right.jpg" width="87" height="189" alt=""></td>
+			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_05_logo_week.jpg" width="345" height="117" alt=""></td>
+		<td colspan="2">
+			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_06_right.jpg" width="73" height="117" alt=""></td>
 		<td>
-			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="141" alt=""></td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="117" alt=""></td>
 	</tr>
 	<tr>
-		<td rowspan="2">
+		<td colspan="2" rowspan="2">
 			<a href="https://www.google.com.br/maps/uv?hl=pt-BR&pb=!1s0x94cc4b06accadc73:0xddb542b96e931e54!2m19!2m2!1i80!2i80!3m1!2i20!16m13!1b1!2m2!1m1!1e1!2m2!1m1!1e3!2m2!1m1!1e5!2m2!1m1!1e4!3m1!7e115!4s/maps/place/inpe/@-23.2065747,-45.8610523,3a,75y,197.13h,90t/data%3D*2" target="INPE - São José dos Campos, SP - Brazil"
 				onmouseover="window.status='INPE - São José dos Campos, SP - Brazil';  return true;"
 				onmouseout="window.status='';  return true;">
-				<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_07_link_location.jpg" width="415" height="22" border="0" alt="INPE - S&#227;o Jos&#233; dos Campos, SP - Brazil"></a></td>
+				<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_07_link_location.jpg" width="346" height="19" border="0" alt="INPE - S&#227;o Jos&#233; dos Campos, SP - Brazil"></a></td>
+		<td rowspan="3">
+			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_06_right-09.jpg" width="72" height="41" alt=""></td>
 		<td>
 			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="1" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="2">
-			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_08_left_bottom.jpg" width="241" height="47" alt=""></td>
+			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_08_left_bottom.jpg" width="201" height="40" alt=""></td>
 		<td>
-			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="21" alt=""></td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="18" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_09_rigth_bottom.jpg" width="346" height="22" alt=""></td>
+		<td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="22" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img style="display: block;" border="0" src="images/email-marketing-ameriGeoss_09_rigth_bottom.jpg" width="415" height="26" alt=""></td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="54" height="1" alt=""></td>
 		<td>
-			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="26" alt=""></td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="201" height="1" alt=""></td>
+		<td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="77" height="1" alt=""></td>
+		<td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="345" height="1" alt=""></td>
+		<td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="1" height="1" alt=""></td>
+		<td>
+			<img style="display: block;" border="0" src="images/spacer.gif" width="72" height="1" alt=""></td>
+		<td></td>
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
